[gd_scene load_steps=2 format=3 uid="uid://siybb7u48rs8"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_jihuh"]

[node name="Pause Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jihuh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Return to Title" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Title"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return to Title" to="." method="_on_return_to_title_pressed"]
